--- a/cme/templates/css/exportPage.styl
+++ b/cme/templates/css/exportPage.styl
@@ -13,6 +13,8 @@
 		text-align left
 		& span:last-child
 			font-style italic
+	thead tr:last-child
+		background-color rgba(button-bg-color, 0.25)
 	tbody tr:nth-child(odd)
 		background-color rgba(button-bg-color, 0.1)
 	
